--- a/cs231.md
+++ b/cs231.md
@@ -2,4 +2,4 @@
 ## class3
 1. loss function加正则项，是为了减少过拟合，比如在训练集中，由于给的数据较少，把本该拟合成直线的函数拟合成复杂的多项式曲线。正则项用来控制模型复杂度，如果模型想变复杂，那么它必须克服正则项带来的额外惩罚。
 ## class5
-1. zero padding给输入信号加0边框，是为了使输出的信号的尺寸与原来一样，否则会变小
+1. zero padding给输入信号加0边框，是为了使输出的信号的尺寸与原来一样，否则会变小。
