--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -5,5 +5,8 @@
     * 普通的程序不方便定义
     * 有关于范式的数据
 2. 机器学习模型=算法+假设
-3. 机器学习：用数据来计算假设，逼近真实的分布  
-数据挖掘：从大数据中找到**感兴趣**的性质
+3. **机器学习ML**：用数据来计算假设，逼近真实的分布  
+**数据挖掘DM**：从大数据中找到**感兴趣**的性质，如果ML的假设就是感兴趣的性质，那么此时ML=DM  
+**人工智能AI**：让机器具备智能行为，机器学习是实现人工智能的方式   
+**统计Statistics**: 使用数据来对某个未知过程做推理，是从数学出发的，可以用来实现机器学习
+## Learning to Answer Yes/No
