--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -10,3 +10,5 @@
 **人工智能AI**：让机器具备智能行为，机器学习是实现人工智能的方式   
 **统计Statistics**: 使用数据来对某个未知过程做推理，是从数学出发的，可以用来实现机器学习
 ## Learning to Answer Yes/No
+1. 感知器假设+算法，感知器就是线性分类器的一种  
+2. 感知器算法：Perceptron Learning Algorithm $1+2=3$
