--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -1,4 +1,6 @@
 # 机器学习基石
+up-to-now：2.2   
+to-watch: 2.3
 ## The Learning Problem    
 1. 适用机器学习的条件  
     * 存在范式
@@ -11,4 +13,8 @@
 **统计Statistics**: 使用数据来对某个未知过程做推理，是从数学出发的，可以用来实现机器学习
 ## Learning to Answer Yes/No
 1. 感知器假设+算法，感知器就是线性分类器的一种  
-2. 感知器算法：Perceptron Learning Algorithm $1+2=3$
+2. 感知器算法    
+   * Perceptron Learning Algorithm=> W(t+1)= W(t)+y[n(t)]x[n(t)]
+   * h-正负分割线就是W(t)的法线      
+
+   
