--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -13,6 +13,10 @@
 1. 感知器假设+算法，感知器就是线性分类器的一种  
 2. 感知器算法    
    * Perceptron Learning Algorithm=> W(t+1)= W(t)+y[n(t)]x[n(t)]
-   * h-正负分割线就是W(t)的法线      
+   * h-正负分割线就是W(t)的法线   
+   * 证明了PLA算法会停/收敛，前提：数据线性可分   
+3. 处理带噪声的线性
+   * Pocket：最小化误差，比PLA慢
+   * 通过保持最好的线在手里，来调整PLA
 
    
