--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -16,7 +16,7 @@
    * h-正负分割线就是W(t)的法线   
    * 证明了PLA算法会停/收敛，前提：数据线性可分   
 3. 处理带噪声的线性
-   * Pocket：最小化误差，比PLA慢
+   * Pocket：以迭代的方式最小化误差，比PLA慢
    * 通过保持最好的线在手里，来调整PLA
 
    
