--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -19,5 +19,10 @@
    * 没有闭式解，np-hard问题
    * Pocket：以迭代的方式最小化误差，比PLA慢
    * 通过保持最好的线在手里，来调整PLA
-
-   
+4. 学习算法的类型  
+   * 监督式
+   * 无监督
+   * 半监督
+   * 强化学习
+5. 学习的可行性分析
+   * Hoeffding不等式：样本足够大时，样本分布接近真实分布，故能用抽样来估计真实的分布
