--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -27,3 +27,7 @@
 4. 学习的可行性分析
    * No Free Launch：针对某一领域所有问题，所有算法的期望性能是相同的
    * Hoeffding不等式：样本足够大时，样本分布接近真实分布，故能用抽样来估计真实的分布
+## Training versus Testing
+1. 讨论误差上限，对假设进行分类
+   * 有效线的数量是有限的
+   * 有效假设的数量=有效线的数量
