--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -31,3 +31,7 @@
 1. 讨论误差上限，对假设进行分类
    * 有效线的数量是有限的
    * 有效假设的数量=有效线的数量
+2. 成长函数=假设数量对于样本数量的函数
+3. 断点k：成长函数对于k的值<2^k，关注最小断点
+## Theory of Generalization
+1. 
