--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -32,6 +32,7 @@
    * 有效线的数量是有限的
    * 有效假设的数量=有效线的数量
 2. 成长函数=假设数量对于样本数量的函数
-3. 断点k：成长函数对于k的值<2^k，关注最小断点
+3. 断点k：growth function对于k的值<2^k(shatter)，关注最小断点
 ## Theory of Generalization
-1. 
+1. minimum break point对假设数量的限制:固定minimum break point，固定样本数量，便固定了假设的数量，也就是dichotomy（二分）的条数
+2. 
