--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -35,4 +35,4 @@
 3. 断点k：growth function对于k的值<2^k(shatter)，关注最小断点
 ## Theory of Generalization
 1. minimum break point对假设数量的限制:固定minimum break point，固定样本数量，便固定了假设的数量，也就是dichotomy（二分）的条数
-2. 
+2. bounding function/上限函数:对于mbp的最大假设数量
