--- a/机器学习基石.md
+++ b/机器学习基石.md
@@ -36,3 +36,9 @@
 ## Theory of Generalization
 1. minimum break point对假设数量的限制:固定minimum break point，固定样本数量，便固定了假设的数量，也就是dichotomy（二分）的条数
 2. bounding function/上限函数:对于mbp的最大假设数量
+3. VC bound形象化证明（不严格）
+## The VC Dimension
+1. VC维=最大的non-break point=minimum break point-1，是对minimum break point的另一种定义
+2. 多维perceptron的VC维
+   * 1D perceptron的VC维=2
+   * 2D perceptron的VC维=3
