--- a/深度学习工程师.md
+++ b/深度学习工程师.md
@@ -1,3 +1,7 @@
 # Neural Network& Deep Learning
 ## 深度学习概论
 ## 神经网络基础
+1. loss function是对单个函数来说， cost function是对整个训练集来说
+2. vector计算比for循环快100X，SIMD指令-单指令流多数据流，用好numpy库
+3. Python-broadcasting: 向量和实数做运算时，自动把实数扩充成向量；避免(5,)这种rank=1 矩阵，它既不是行向量也不是列向量，用(5,1)这种明确的矩阵
+## 浅层神经网络
