--- a/编程经验.md
+++ b/编程经验.md
@@ -1,6 +1,6 @@
 # 电脑经验
 ## Win下编译opencv python3
-1. 先安装CMake，再装Anaconda 3，若已装了Anaconda，需卸了重装，这样CMake才能检测到python3的所有路径配置，才会自动跳出来`BUILD_opencv_python3`的选项，再根据需要勾选extra_modules(即opencv_contrib)和nonfree(如bm3d等一切在不勾选此选项时，提示nonfree导致不能用的算法)选项。注意在配置编译器的时候，**一定要选64位版本的Visual Studio，默认不是64位的，这样在打开的sln项目文件中，配置才是x64的，否则就是Win32应用程序**。在VS中，只用生成`bindings-python`这个部分，其它不用管
+1. 先安装CMake，再装Anaconda 3，若已装了Anaconda，需卸了重装，这样CMake才能检测到python3的所有路径配置，才会自动跳出来`BUILD_opencv_python3`的选项，再根据需要勾选extra_modules(即opencv_contrib)和nonfree(如bm3d等一切在不勾选此选项时，提示nonfree导致不能用的算法)选项。注意在配置编译器的时候，**一定要选64位版本的Visual Studio，默认不是64位的，这样在打开的sln项目文件中，配置才是x64的，否则就是Win32应用程序，在vs中强行改会报错**。在VS中，只用生成`bindings-python`这个部分，其它不用管
 <div  align="center">    
 <img src="img/cmake.PNG" alt="图片名称" align=center />
 </div>
