--- a/编程经验.md
+++ b/编程经验.md
@@ -7,8 +7,11 @@
 
 2. 把生成的`bin\Release`下的所有文件(包括dll和database)，以及`lib\python3\Release`下的`cv2.cp36-win_amd64.pyd`复制到`Anaconda3\DLLs`文件夹中，此时可以`import cv2`，可正常使用但在pycharm中没有函数提示
 
-3. 进入下图目录，pycharm在进行函数提示时，调用此处的`__init__.py`文件，此时为0kb，打开上方的`__init__`文件夹，将里面非空的`__init__.py`拷贝到`cv2`目录下，删掉原来0kb的`__init__.py`,重启pycharm，提示回来了!
+3. 进入第1张图目录，pycharm在进行函数提示时，调用此处的`__init__.py`文件，此时为0kb，打开上方的`__init__`文件夹，如第2张图，将里面非空的`__init__.py`拷贝到`cv2`目录下，删掉原来0kb的`__init__.py`,重启pycharm，提示回来了!
 <div  align="center">    
 <img src="img/init.PNG" alt="图片名称" align=center />
 </div>
-
+<br />
+<div  align="center">    
+<img src="img/init_2.PNG" alt="图片名称" align=center />
+</div>
